// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLLiveData Integration publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/numberOfCats",
        "value": 200,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' 2`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/address",
        "value": "123 real st apt. 1",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/1/address",
        "value": "200 legit rd apt. 2",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/jedis/0/houses/0/address",
        "value": "200 legit rd apt. 2 90211",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/jedis/2/houses/0/address",
        "value": "200 legit rd apt. 2 90211",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/jedis/2/houses/1/address",
        "value": "123 real st apt. 1 90210",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with new child objects 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "add",
        "path": "/jedis/0/primaryAddress",
        "value": Object {
          "address": "123 real st 90210",
          "id": "real_street",
        },
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with new list entries 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "add",
        "path": "/houses/2",
        "value": Object {
          "address": "somwhere",
          "id": "add_that_id",
          "numberOfCats": 10,
        },
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with removed list entries 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "remove",
        "path": "/jedis/0",
        "value": null,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": Object {
      "houses": Array [
        Object {
          "address": "123 real st",
          "id": "real_street",
          "numberOfCats": 5,
        },
        Object {
          "address": "200 legit rd",
          "id": "legit_road",
          "numberOfCats": 0,
        },
      ],
      "jedis": Array [
        Object {
          "houses": Array [
            Object {
              "address": "200 legit rd 90211",
              "id": "legit_road",
            },
          ],
          "id": "jedi_1",
          "name": "Luke Skywalker",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [],
          "id": "jedi_2",
          "name": "Yoda",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [
            Object {
              "address": "200 legit rd 90211",
              "id": "legit_road",
            },
            Object {
              "address": "123 real st 90210",
              "id": "real_street",
            },
          ],
          "id": "jedi_3",
          "name": "Mace Windu",
          "primaryAddress": null,
        },
      ],
    },
  },
}
`;

exports[`GraphQLLiveData Integration with an empty Array publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "remove",
        "path": "/jedis/0",
        "value": null,
      },
      Object {
        "from": null,
        "op": "add",
        "path": "/jedis/0",
        "value": Object {
          "houses": Array [],
          "id": "a_different_id",
          "name": "Luke Skywalker",
          "primaryAddress": null,
        },
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration with an empty Array publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": Object {
      "houses": Array [],
      "jedis": Array [
        Object {
          "houses": Array [],
          "id": "jedi_1",
          "name": "Luke Skywalker",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [],
          "id": "jedi_2",
          "name": "Yoda",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [],
          "id": "jedi_3",
          "name": "Mace Windu",
          "primaryAddress": null,
        },
      ],
    },
  },
}
`;

exports[`GraphQLLiveData Integration with an empty Immutable List publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "remove",
        "path": "/jedis/0",
        "value": null,
      },
      Object {
        "from": null,
        "op": "add",
        "path": "/jedis/0",
        "value": Object {
          "houses": Array [],
          "id": "a_different_id",
          "name": "Luke Skywalker",
          "primaryAddress": null,
        },
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration with an empty Immutable List publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": Object {
      "houses": Array [],
      "jedis": Array [
        Object {
          "houses": Array [],
          "id": "jedi_1",
          "name": "Luke Skywalker",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [],
          "id": "jedi_2",
          "name": "Yoda",
          "primaryAddress": null,
        },
        Object {
          "houses": Array [],
          "id": "jedi_3",
          "name": "Mace Windu",
          "primaryAddress": null,
        },
      ],
    },
  },
}
`;
